RESOLVED FIXED165981
WebAssembly: We still have some incorrect parsing productions inside unreachable code
https://bugs.webkit.org/show_bug.cgi?id=165981
Summary WebAssembly: We still have some incorrect parsing productions inside unreacha...
Saam Barati
Reported 2016-12-16 17:14:52 PST
...
Attachments
patch (2.84 KB, patch)
2016-12-16 17:25 PST, Saam Barati
no flags
patch (2.87 KB, patch)
2016-12-16 17:27 PST, Saam Barati
no flags
Saam Barati
Comment 1 2016-12-16 17:25:59 PST
Saam Barati
Comment 2 2016-12-16 17:27:33 PST
Created attachment 297379 [details] patch Hopefully this one builds.
Keith Miller
Comment 3 2016-12-16 18:53:18 PST
Comment on attachment 297379 [details] patch r=me.
WebKit Commit Bot
Comment 4 2016-12-16 19:20:25 PST
Comment on attachment 297379 [details] patch Clearing flags on attachment: 297379 Committed r209955: <http://trac.webkit.org/changeset/209955>
WebKit Commit Bot
Comment 5 2016-12-16 19:20:32 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.