WebAssembly: We still have some incorrect parsing productions inside unreachable code https://bugs.webkit.org/show_bug.cgi?id=165981

Reviewed by Keith Miller.

This hardens our parsing for CallIndirect and Loop/Block/If to be exactly like their reachable variant.

It also fixes a more nefarious bug in which we were decoding an extra varuint32
for Br/BrIf inside unreachable code.

* wasm/WasmFunctionParser.h:


Canonical link: https://commits.webkit.org/183585@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209955 268f45cc-cd09-0410-ab3c-d52691b4dbfc